# jags-amoroso

./: .gitignore  Makefile.am  README  README.win  configure.ac
src/: Makefile.am  amoroso.cc
src/distributions/: DAmoroso.cc  DAmoroso.h  Makefile.am
usage_example/: amoroso.R
win/: jags.nsi
